--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <h1>Welcome to the Shrek Website</h1>
+    <h1>Welcome to Shrek's Swamp!</h1>
+    <div class="container">
+        <p>Shrek is the very best movie of all time! Everyone deserves to know as much as possible about the movie. Explore these different pages to learn more!</p>
+        <a href="/characters" class="linkBox">
+            <h2>Characters</h2>
+            <p>Learn more about your favorite Shrek characters like Shrek, Fiona, Donkey, and Puss in Boots!</p>
+        </a>
+        <a href="/quotes" class="linkBox">
+            <h2>Quotes</h2>
+            <p>Explore the most memorable, funny, and meaning quotes from all four of the Shrek movies and the two Puss in Boots movies!</p>
+        </a>
+        <a href="/music" class="linkBox">
+            <h2>Music</h2>
+            <p>Discover why some of the most iconic Shrek songs like "All Star," "I'm a Believer," and "Accidently in Love" are so well used in the movies!</p>
+        </a>
+    </div>
 </body>
 </html>
