Add Donkey, Fiona, and Puss to the characters page

--- a/characters/index.html
+++ b/characters/index.html
@@ -14,7 +14,7 @@
         of your favorite characters from the Shrek and Puss in Boots movies.
       </p>
       <div class="character">
-        <div className="characterText">
+        <div class="characterText">
           <h2>Shrek</h2>
           <p>
             Shrek is the main character of the Shrek movies, oviously. He is a
@@ -28,6 +28,64 @@
         <img
           src="https://i.pinimg.com/originals/2a/8c/83/2a8c839914f9facd6fbaaef5abf9ff38.jpg"
           alt="Shrek"
+        />
+      </div>
+      <div class="character">
+        <div class="characterText">
+          <h2>Donkey</h2>
+          <p>
+            Donkey is Shrek's bestest friend ever! He started out as an annoying
+            talking donkey (again, not annoying to me!) who really annoyed
+            Shrek, but throughout the first move he became Shrek's friend. Later
+            he also becomes best friends with Puss in Boots. Dokney even married
+            the dragon from the first film and had 4 donkey-dragon hybrid babies
+            with her.
+          </p>
+        </div>
+        <img
+          src="https://cdn.quotesgram.com/img/68/15/1305686350-Shrek-3-Donkey-shrek-30165080-1280-1024.jpg"
+          alt="Donkey"
+        />
+      </div>
+      <div class="character">
+        <div class="characterText">
+          <h2>Fiona</h2>
+          <p>
+            Fiona is Shrek's wife and a princess from the kingdom of Far Far
+            Away. She started out the first film as a human princess locked away
+            in a castle guarded by a terrible fire-breathing dragon, that had an
+            enchantment upon her of a fearful sort which could only be broken by
+            true love's first kiss. She was rescued by Shrek and Donkey, but she
+            thought Shrek was an ugly ogre (I think he's hot!) and thought that
+            Farquaad was her true love. After spending a bunch of time with
+            Shrek, she realized how hot, amazing, and funny Shrek is. Later she
+            kissed Shrek and she was turned into an ogre permanently and then
+            she got married to Shrek!
+          </p>
+        </div>
+        <img
+          src="https://i.pinimg.com/originals/70/be/82/70be8281804f30054e1c6ca111beb634.png"
+          alt="Fiona"
+        />
+      </div>
+      <div class="character">
+        <div class="characterText">
+          <h2>Puss in Boots (aka Pickles)</h2>
+          <p>
+            Puss in Boots is our favorite fearless hero from the Shrek movies.
+            He is even featured in his own spin-off movies! Puss in Boots was
+            hired to kill Shrek by Fiona's father, King Harold, but he ended up
+            become Shrek and Donkey's best friend because Shrek spared his life.
+            He also has a really cool catchphrase: "Fear me, if you dare," where
+            he also cuts his signature mark. In Puss in Boots: The Last Wish, he
+            became friends with Perrito, and he picked up the nickname
+            "Pickles." Puss is now down to only 1 of his 9 lives, so he has to
+            live this one to the fullest.
+          </p>
+        </div>
+        <img
+          src="https://tse1.explicit.bing.net/th/id/OIP.KAZnVqet8IcAbkElOZlKQwHaE8?r=0&rs=1&pid=ImgDetMain"
+          alt="Puss in Boots"
         />
       </div>
     </div>
