Finish up the characters page

--- a/characters/index.html
+++ b/characters/index.html
@@ -88,6 +88,49 @@
           alt="Puss in Boots"
         />
       </div>
+      <div class="character">
+        <div class="characterText">
+          <h2>Gingy</h2>
+          <p>
+            Do you know the Muffin Man? The Muffin Man? The Muffin Man. Yes I
+            know the Muffin Man, who lives on Drury Lane? Well, she's married to
+            the Muffin Man. The Muffin Man! The MUFFIN MAN!!! This is probably
+            Gingy's most famous quote, along side "Not the gumdrop buttons!" He
+            also had a big part in Shrek 2 in breaking into the castle while
+            Fairy Godmother was doing an amazing performance of "Holding Out for
+            a Hero." (More on that later!) He also has my favorite non Shrek
+            movie canon: his girlfriend was eaten by Santa!
+          </p>
+        </div>
+        <img
+          src="https://tse2.mm.bing.net/th/id/OIP.Bld8f8yWNPWrtW-3hvziCAHaFU?r=0&rs=1&pid=ImgDetMain"
+          alt="Gingy"
+        />
+      </div>
+      <div class="character">
+        <div class="characterText">
+          <h2>Pinocchio</h2>
+          <p>
+            Pinocchio the puppet is a puppet made by Geppetto. Pinocchio always
+            says he's a real boy, and for a short time in Shrek 2 he was. He is
+            most known for his nose growing when he lies, and for wearing
+            woman's underwear. I also wrote a play about Pinocchio for an
+            English project, you should check it out
+            <a
+              href="https://docs.google.com/document/d/18mttO1o6JkQhfuEBCGUUtVMU6cu0X8QxpRH5Vm3j5mE/edit?usp=sharing"
+              target="_blank"
+              >here</a
+            >!
+          </p>
+        </div>
+        <img
+          src="https://th.bing.com/th/id/OIP.oW_XSBtzD463c8t3AW3UdAAAAA?r=0&rs=1&pid=ImgDetMain"
+          alt="Pinocchio"
+        />
+      </div>
+      <a href="/" class="linkBox">
+        <span>Go back to the SWAMP</span>
+      </a>
     </div>
   </body>
 </html>
