Adds quotes to the quotes page

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -53,6 +53,13 @@
         </p>
       </div>
       <div class="quote">
+        <h2>"Well that's not very nice. It's just a donkey." - Shrek</h2>
+        <p>
+          This is from when Farquaad says "What's that? It's hideous!" This was
+          an attack at Shrek, but by saying this Shrek made it about Donkey.
+        </p>
+      </div>
+      <div class="quote">
         <h2>"And in the morning, I'm making waffles!" - Donkey</h2>
         <p>
           This is probably my favorite Donkey quotes. Donkey says this to Shrek
@@ -60,6 +67,50 @@
           think it shows how fun Donkey is. This line is also refrenced in the
           forth movie when Donkey goes to try and eat some waffles that are
           actually a trap set by the rogue ogres.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"If that was me, you'd be dead." - Shrek</h2>
+        <p>
+          This is the scene where Donkey thinks Shrek made a stinky fart. But in
+          reality, it was the sulfer from the volcano. Shrek says this because
+          if it was him making the smell, Donkey would pass out because of how
+          bad the stench is.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"I'm an ogre, ROAR!" - Donkey</h2>
+        <p>
+          This is when Shrek and Fiona are having a fight about weather to stay
+          in Far Far Away. Shrek says "I'm an ogre" and then roars at a little
+          dog. Donkey immitates Shrek for this because Shrek was kidna being a
+          jerk by doing that and he deserved to be made of.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>
+          "Cute, button nose? Thick, wavy locks? Taut, round buttocks?" - Shrek
+        </h2>
+        <p>
+          I think this is a great quote because it shows how attractive Shrek is
+          in human form. This is when Shrek wakes up to a bunch of girls all
+          around him after he fell asleep from drinking that potion. When he
+          woke up he realized that he was turned into a human and he thought
+          that would make Fiona really like him and have a happily ever after.
+          Donkey was turned into a noble steed and it's believed that Dragon was
+          turned into a pegasus.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>
+          "Donkey, you have the right to remain silent... what you lack is the
+          capacity." - Shrek
+        </h2>
+        <p>
+          This is from when Shrek and Donkey were getting arrested because they
+          were accused for stealing by Fairy Godmother when they overheard that
+          Prince Charming is her son. Donkey kept saying that no one told him he
+          as the right to remain silent, so Shrek made this joke.
         </p>
       </div>
     </div>
