Add more quotes and a SWAMP button

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -79,6 +79,28 @@
         </p>
       </div>
       <div class="quote">
+        <h2>"Do you think he's compensating for somthing?" - Shrek</h2>
+        <p>
+          Shrek says this when they first see Lord Farquaad's castle to Donkey.
+          This is an example of when Shrek uses some adult humor to be such a
+          great and enjoyable movie for everyone of all ages.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>
+          "You know, Donkey, sometimes things are more than they appear." -
+          Shrek
+        </h2>
+        <p>
+          This is said to Donkey when Shrek and Donkey are laying on the ground
+          under the star at night. Shrek is telling Donkey about the
+          constallations and how they can tell stories. Donkey thinks Shrek is
+          making this all up and then shrek says this quote. This is a very
+          important lesson, especsially to Shrek, because ogres are often very
+          misunderstood and they are much more than they appear.
+        </p>
+      </div>
+      <div class="quote">
         <h2>"I'm an ogre, ROAR!" - Donkey</h2>
         <p>
           This is when Shrek and Fiona are having a fight about weather to stay
@@ -113,6 +135,18 @@
           as the right to remain silent, so Shrek made this joke.
         </p>
       </div>
+      <div class="quote">
+        <h2>
+          "Somday, I will repay you. Unless, of course, I can't find you or if I
+          forget" - Shrek
+        </h2>
+        <p>
+          Shrek said this during the scene where he's a human and he robs a
+          random cart so that he can fit in. I'm including this because it's
+          just really, really funny and brings a lot of joy to the movie
+        </p>
+      </div>
+      <a href="/" class="linkBox"> <span>Go back to the SWAMP</span> </a>
     </div>
   </body>
 </html>
