Add some more songs

--- a/music/index.html
+++ b/music/index.html
@@ -59,6 +59,75 @@
           allowfullscreen
         ></iframe>
       </div>
+      <div class="song">
+        <div class="songText">
+          <h2>Hallelujah - Rufus Wainwright</h2>
+          <p>
+            Hallelujah is played during the scene where Fiona is leaving to go
+            with Lord Farquaad. This song sets the mood for the scene really
+            well, very sad. It greatly shows how Shrek, Fiona, and Donkey feel
+            about being apart after being together for their trip. This sets up
+            two relationships: Donkey & Dragon and Shrek & Fiona. Hallelujah is
+            also just a very good song.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/sc1kdEBlw1c?si=CAnvGIY-ZuOroN7t"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="song">
+        <div class="songText">
+          <h2>Accidentally in Love - Counting Crows</h2>
+          <p>
+            Now it's time for the opening song from Shrek 2, "Accidentally in
+            Love." This song is played during Shrek and Fiona's honeymoon. This
+            song is actually a great representation of how Shrek and Fiona fell
+            in love, because they weren't really intending to fall in love, it
+            just kinda happened. We also get another great Shrek mud hot tub
+            scene! Again, this song is really good and very catchy.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/30ubO6big_w?si=Cyqpjw5laBYBHvJB"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="song">
+        <div class="songText">
+          <h2>I Need a Hero - Fairy Godmother</h2>
+          <p>
+            Okay, I can't resist any logger, time to talk about "I Need a Hero!"
+            This is such an amazing performance by the Fairy Godmother. This is
+            the scene where Shrek is trying to be the hero and save Fiona from
+            being with Prince Charming, who she doesn't want to be with. We also
+            get to see a Giant Gingy! This song is probably my favorite song
+            from the movies.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/T8PcBTvdxPs?si=_yDHFMUAyUODoNVX"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
   </body>
 </html>
