How did I even make this mistake :(

--- a/music/index.html
+++ b/music/index.html
@@ -107,14 +107,14 @@
       </div>
       <div class="song">
         <div class="songText">
-          <h2>I Need a Hero - Fairy Godmother</h2>
+          <h2>Holding Out for a Hero - Fairy Godmother</h2>
           <p>
-            Okay, I can't resist any logger, time to talk about "I Need a Hero!"
-            This is such an amazing performance by the Fairy Godmother. This is
-            the scene where Shrek is trying to be the hero and save Fiona from
-            being with Prince Charming, who she doesn't want to be with. We also
-            get to see a Giant Gingy! This song is probably my favorite song
-            from the movies.
+            Okay, I can't resist any logger, time to talk about "Holding Out for
+            a Hero!" This is such an amazing performance by the Fairy Godmother.
+            This is the scene where Shrek is trying to be the hero and save
+            Fiona from being with Prince Charming, who she doesn't want to be
+            with. We also get to see a Giant Gingy! This song is probably my
+            favorite song from the movies.
           </p>
         </div>
         <iframe
