Add even more songs!

--- a/music/index.html
+++ b/music/index.html
@@ -128,6 +128,76 @@
           allowfullscreen
         ></iframe>
       </div>
+      <div class="song">
+        <div class="songText">
+          <h2>Royal Pain - Eels</h2>
+          <p>
+            I wasn't really sure if I was going to talk about Shrek the Third
+            because there aren't really any songs that really stood out to me.
+            I'm gonna talk to this one because it kinda just feels like they
+            were taking the easy way out. It starts out with "I got some sleep
+            and I needed it." This feels cheap because in Shrek 2 they were
+            playing "I need some sleep" by Lux. I assume they pick this song
+            because what Shrek is going through is a royal (literally) pain.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/sWjVe9dMRHU?si=PgQVxcIU4eS5K5HJ"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="song">
+        <div class="songText">
+          <h2>Shake Your Groove Thing - Peaches & Herb</h2>
+          <p>
+            I don't really think this song is that exceptional, I just want to
+            talk about the villian and the dance scene. The Piper is one of the
+            villains of Shrek Forever After, and he is able to control people by
+            playing music. I think this is a really unique and fun idea for a
+            villain. We also get to see some awesome ogre dancing from Shrek,
+            and all of the other ogres.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/hIJ0gMDZT_4?si=Xe9hFbR8DDGbi3PX"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="song">
+        <div class="songText">
+          <h2>Who I'd Be - Shrek the Musical</h2>
+          <p>
+            I know this isn't a Shrek movie, but I really like the songs from
+            Shrek the Musical (try and stop me). This is probably my favorite
+            song from the entire musical. I'm not really sure why this is my
+            favorite, but I do have some theories: Brian d'Arcy James is an
+            INCREDIBLE singer, or it could be that I'm a really big fan of Shrek
+            himself. Perhaps it's event a combination of both.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/nt76BjUspeg?si=LD0lv3DyJuoeCt_t"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
   </body>
 </html>
