I added some more songs from Shrek the Musical

--- a/music/index.html
+++ b/music/index.html
@@ -198,6 +198,78 @@
           allowfullscreen
         ></iframe>
       </div>
+      <div class="song">
+        <div class="songText">
+          <h2>Don't Let Me Go - Shrek the Musical</h2>
+          <p>
+            This is another favorite of my from the musical, I just really enjoy
+            the way Donkey sings. There are also some really funny jokes. One of
+            which is the line "I'm gonna be on you like a fat kid on cake!"
+            Another one is "You don't know what it's like to be considered a
+            freak! Well maybe you do." I think this is a great song to have
+            Donkey sing because it shows how funny he is in the Shrek movie and
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/V7-9NEIUB3s?si=fk2hY_OCcAeQxWwE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="song">
+        <div class="songText">
+          <h2>I Think I Got You Beat - Shrek the Musical</h2>
+          <p>
+            This is another great song. I really enjoy the back and forth that
+            Shrek and Fiona have. It's also interesting to learn about about the
+            struggles that Fiona and Shrek have gone through in their lifes.
+            This wasn't covered in the movies, but I think it's really cool to
+            learn about what they went through. Now, I can't talk about this
+            song and not talk about the ending. At the end of the song, Shrek
+            and Fiona are trying to out gross each other with farts and burps.
+            And then Donkey walks up and smells all of it.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/pdSpx6Doub0?si=CAFdk7LRJ_UGm5QN"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="song">
+        <div class="songText">
+          <h2>The Ballad of Farquaad - Shrek the Musical</h2>
+          <p>
+            Oh man, why are there so many songs from the musical that I want to
+            talk about? I'll keep it SHORT for this one (get it?). This song is
+            cool because we get to learn more about Lord Farquaad and how his
+            dad is also short. We also learn that his Dad was grumpy and that he
+            slept seven to a bed. So, this means that Lord Farquaad's Dad is
+            probably Grumpy from "Snow White and the Seven Dwarfs." (I'm not
+            sure if this is lore, but it's a theory of mine).
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/tTg38pz6hKI?si=eIG2r_4p4XPMqqlb"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
   </body>
 </html>
