Add some more songs and a back button

--- a/music/index.html
+++ b/music/index.html
@@ -270,6 +270,51 @@
           allowfullscreen
         ></iframe>
       </div>
+      <div class="song">
+        <div class="songText">
+          <h2>When Words Fail - Shrek the Musical</h2>
+          <p>
+            Another song from the musical, who is picking these? Oh wait, that's
+            me. This is a song about how Shrek wants to tell Fiona how he feels,
+            but he's woried that words won't be enough and that they will fail
+            him. It goes through different ways Shrek thinks he should tell
+            Fiona that he loves her. This is another song that is one of my
+            favorites from the musical, probably my second favorite.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/GrW316L8KUI?si=YWm_eJZbevBYlKof"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="song">
+        <div class="songText">
+          <h2>Fearless Hero - Puss In Boots</h2>
+          <p>
+            This is the song Puss played at the start of Puss in Boots: The Last
+            Wish. It shows how unhumble Puss is, and how he thinks he's the
+            best. But, the song is really good and probably one of my favorite
+            scenes from the movie.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/WT1-8T_Taro?si=j2GtBC9JNgg4D9Qt"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <a href="/" class="linkBox"> <span>Go back to the SWAMP</span> </a>
     </div>
   </body>
 </html>
