Add more quotes

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -146,6 +146,49 @@
           just really, really funny and brings a lot of joy to the movie
         </p>
       </div>
+      <div class="quote">
+        <h2>"Fear me, if you dare!" - Puss in Boots</h2>
+        <p>
+          This is Puss' line that he is know for saying. He also makes the
+          triangular p with his sword in a tree or something. This is a great
+          quote from Puss because it shows how brave he is. While Puss may be a
+          rather small cat, he is still very brave and fearless, some might even
+          say he is our favorite fearless hero.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>
+          "I'm Death. And I don't mean it metaphorically or rhetorically or
+          poetically or theoretically or any other fancy way. I'M DEATH.
+          STRAIGHT UP!" - Death
+        </h2>
+        <p>
+          This is such a cool quote from Puss in Boots: The Last Wish. I think
+          this line is such a perfect introduction for Puss learning who Death
+          is. It incites fear really well, even for the audience. I think this
+          is one of the lines that makes Death such a good villain.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"Wha-wha! What took you so long, IDIOT?" - Jack Horner</h2>
+        <p>
+          This is a line Jack Horner said in response to Jimminy Cricket saying
+          "That was horrible! Your wish is horrible! You're horrible! You're an
+          irredeemable monster!" I think this line does a great job of showing
+          how genuinly evil Jack Horner is. He doesn't care about anything,
+          including of what people think of him.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"And you're supposed to be dead!" - Goldilocks</h2>
+        <p>
+          This line is really only funny within the conext. Goldilocks and the
+          three bears are hunting down Puss, and they find what they think is
+          his grave. When they're at Jack Horner's, they see Puss alive and say
+          this line. The Puss says the really funny line "I got better?" I think
+          this is just a really funny and enjoyable scene because of this line.
+        </p>
+      </div>
       <a href="/" class="linkBox"> <span>Go back to the SWAMP</span> </a>
     </div>
   </body>
