Add more quotes

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -189,6 +189,62 @@
           this is just a really funny and enjoyable scene because of this line.
         </p>
       </div>
+      <div class="quote">
+        <h2>
+          "Okay, okay, one more number. I call this one, "The Legend Will Never
+          Di..." - Puss in Boots
+        </h2>
+        <p>
+          This is when Puss just took out the monster of Delmar and everyone is
+          cheering for him and asking for an encore. After he says this line,
+          the bell that he used to take out the monster falls and kills Puss.
+          This is really ironic because Puss was just saying that the legend,
+          him, will never die.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>
+          "You guys are jerks, which makes this very conflicting for me!" - Puss
+          in Boots
+        </h2>
+        <p>
+          This is from when Puss is talking to his past lives in the cave of
+          lost souls. This shows some real character development for Puss
+          because he realizes that he has been a jerk in his past lives. I think
+          it is also really cool to see all of the past lives of Puss.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"Yeah, in the face, why?" - Jack Horner</h2>
+        <p>
+          Jack Horner says this after Jimminy Cricket says "You're not gonna
+          shoot a puppy, are you, Jack?" This is another time where we see just
+          how truly evil Jack is. He doesn't really care about anyone and he
+          just wants to get the wish for himself, no matter the cost.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"Say hello to my gatito blade." - Puss in Boots</h2>
+        <p>
+          I think this is a really good moment that Puss has when he is fighting
+          Death. It's kinda a shock to Death because he doesn't know that Puss
+          has another weapon. It's also nice because that was a gift to him from
+          Kitty Softpaws because he only has a wooden stick to use as a sword.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>
+          "There's the famous hat, the feather and, of course, the boots." -
+          Death
+        </h2>
+        <p>
+          This is when Death is talking to Puss in the bar. This line highlights
+          all of the iconic things from Puss. This scene is important because it
+          is the first time Puss has been touched by a blade. This really
+          incites fear into him and makes him realize that he is not invincible
+          and he is on his last life.
+        </p>
+      </div>
       <a href="/" class="linkBox"> <span>Go back to the SWAMP</span> </a>
     </div>
   </body>
