Add more quotes

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -245,6 +245,47 @@
           and he is on his last life.
         </p>
       </div>
+      <div class="quote">
+        <h2>"I just love the smell of fear" - Death</h2>
+        <p>
+          This is after Death cut Puss leaving some blood on his face for the
+          first time. He then goes on to say "What's the matter? Lives flashing
+          before your eyes?" And then he says "Pick it up. Pick... it... up."
+          Finally, he says "Corre, corre, gatito," which in Spanish means "Run,
+          run, little cat (Yeah, I take Spanish class)."
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"It's a stick sword!" - Perrito</h2>
+        <p>
+          This is when Perrito is bringing Puss a sword, but it's really just a
+          stick. I think this is a good line at showing how upbeat and positive
+          Perrito is, even when Puss was being negative. I also think that this
+          is kinda a funny scene and that sword lasts a fair bit through the
+          movie.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"Cause, I'm a real boy! No strings attached!" - Pinocchio</h2>
+        <p>
+          This is a flash back to when Jack Horner was a young boy: Little Jack
+          Horner. I think this was a pretty cool scene and it provides an
+          interesting story. We see how Pinocchio was bringing in the money fast
+          because he's a magic puppet. But, when we get to the Shrek movie, he
+          is being sold to Lord Farquaad for three shillings. Presumably, this
+          means that he stopped bringing in money.
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"Go ahead, run! Makes it more fun for me." - Death</h2>
+        <p>
+          This is another fear inciting line from Death. It really is part of
+          what makes him such a good and scary villain in the Puss in Boots: The
+          Last Wish movie. This shows how Death thinks of killing Puss to be
+          more of a game than anything serious. He's not really worried because
+          he knows he will win.
+        </p>
+      </div>
       <a href="/" class="linkBox"> <span>Go back to the SWAMP</span> </a>
     </div>
   </body>
