Fix for GH Pages

--- a/characters/index.html
+++ b/characters/index.html
@@ -236,7 +236,7 @@
           alt="Big Jack Horner"
         />
       </div>
-      <a href="/" class="linkBox">
+      <a href="../" class="linkBox">
         <span>Go back to the SWAMP</span>
       </a>
     </div>
