--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
         much as possible about the movie. Explore these different pages to learn
         more!
       </p>
-      <a href="/characters" class="linkBox">
+      <a href="./characters" class="linkBox">
         <h2>Characters</h2>
         <p>
           Learn more about your favorite Shrek characters like Shrek, Fiona,
           Donkey, and Puss in Boots!
         </p>
       </a>
-      <a href="/quotes" class="linkBox">
+      <a href="./quotes" class="linkBox">
         <h2>Quotes</h2>
         <p>
           Explore the most memorable, funny, and meaningful quotes from all four
           of the Shrek movies and the two Puss in Boots movies!
         </p>
       </a>
-      <a href="/music" class="linkBox">
+      <a href="./music" class="linkBox">
         <h2>Music</h2>
         <p>
           Discover why some of the most iconic Shrek songs like "All Star," "I'm
