--- a/music/index.html
+++ b/music/index.html
@@ -312,7 +312,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <a href="/" class="linkBox"> <span>Go back to the SWAMP</span> </a>
+      <a href="../" class="linkBox"> <span>Go back to the SWAMP</span> </a>
     </div>
   </body>
 </html>
