--- a/quotes/index.html
+++ b/quotes/index.html
@@ -286,7 +286,7 @@
           he knows he will win.
         </p>
       </div>
-      <a href="/" class="linkBox"> <span>Go back to the SWAMP</span> </a>
+      <a href="../" class="linkBox"> <span>Go back to the SWAMP</span> </a>
     </div>
   </body>
 </html>
