Add somes quotes and a song

--- a/music/index.html
+++ b/music/index.html
@@ -295,6 +295,30 @@
       </div>
       <div class="song">
         <div class="songText">
+          <h2>Big Bright Beautiful World - Shrek the Musical</h2>
+          <p>
+            This is the opening song from the musical. It starts out with Shrek
+            sing about how great his life is in the swamp. Then, his parents
+            send him away. I really enjoy the subversion that his parents do by
+            saying great things about the world, but then saying "but not for
+            you." I just think this is really funny. Then it goes into Shrek
+            accepting that he's an ogre and life is going to be more difficult.
+            He becomes happy with who he is.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/2YPbjAoAo8Q?si=m_V501h4K5mXmHb5"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="song">
+        <div class="songText">
           <h2>Fearless Hero - Puss In Boots</h2>
           <p>
             This is the song Puss played at the start of Puss in Boots: The Last
