--- a/quotes/index.html
+++ b/quotes/index.html
@@ -157,6 +157,24 @@
         </p>
       </div>
       <div class="quote">
+        <h2>"No! That is just a rumor, spread by dogs!" - Puss in Boots</h2>
+        <p>
+          This is from the first Puss in Boots film when Jill said "Is it true a
+          cat always lands on its feet?" I think this is a really funny response
+          (that's it).
+        </p>
+      </div>
+      <div class="quote">
+        <h2>"I know you won't. So I won't make you choose." - Humpy Dumpty</h2>
+        <p>
+          This is a really nice quote from one of the ending scenes of Puss in
+          Boots. Humpty Dumpty is trying to get Puss to save the town of San
+          Ricardo instead of trying to save him and the town because he can't do
+          both. Puss doesn't want to let go of Humpty because he is his brother.
+          This is just a really sweet scene.
+        </p>
+      </div>
+      <div class="quote">
         <h2>
           "I'm Death. And I don't mean it metaphorically or rhetorically or
           poetically or theoretically or any other fancy way. I'M DEATH.
